--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,14 @@
 {
     "builds": [
       {
-        "src": "vercel_wsgi.py",
+        "src": "mypro1/wsgi.py",
         "use": "@vercel/python"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "vercel_wsgi.py"
+        "dest": "mypro1/wsgi.py"
       }
     ]
   }
