--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
       }
     ],
     "routes": [
+        {
+            "src": "/static/(.*)",
+            "dest": "/static/$1"
+          },
       {
         "src": "/(.*)",
         "dest": "mypro1/wsgi.py"
