--- a/vercel.json
+++ b/vercel.json
@@ -6,10 +6,10 @@
       }
     ],
     "routes": [
-        {
-            "src": "/static/(.*)",
-            "dest": "/static/$1"
-          },
+      {
+        "src": "/static/(.*)",
+        "dest": "/staticfiles/$1"
+      },
       {
         "src": "/(.*)",
         "dest": "mypro1/wsgi.py"
